--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "restaurant_app",
-    "short_name": "restaurant_app",
+    "name": "makan_bang",
+    "short_name": "makan_bang",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
