--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "restaurant_app" "\0"
+            VALUE "FileDescription", "makan_bang" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "restaurant_app" "\0"
+            VALUE "InternalName", "makan_bang" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "restaurant_app.exe" "\0"
-            VALUE "ProductName", "restaurant_app" "\0"
+            VALUE "OriginalFilename", "makan_bang.exe" "\0"
+            VALUE "ProductName", "makan_bang" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
