--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^3.1.2
+  carousel_slider: ^4.2.1
+  connectivity_plus: ^2.3.8
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  get: ^4.6.6
   google_fonts: ^6.1.0
+  http: ^1.1.2
   lottie: ^3.0.0
+  smooth_page_indicator: ^1.1.0
+  typing_animation: ^0.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -57,7 +63,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
-    - assets/json/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
