--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^16.3.0
   get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.2
   lottie: ^3.0.0
+  shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  timezone: ^0.9.2
   typing_animation: ^0.0.1
 
 dev_dependencies:
