--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_alarm_manager_plus: ^3.0.4
   animate_do: ^3.1.2
   carousel_slider: ^4.2.1
   connectivity_plus: ^2.3.8
@@ -39,7 +40,9 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.2
+  intl: ^0.19.0
   lottie: ^3.0.0
+  rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   timezone: ^0.9.2
