--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,12 +65,16 @@ flutter {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
 }
 
 configurations.all {
     resolutionStrategy {
         eachDependency {
             if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-stdlib"))) {
+                useVersion("1.8.0")
+            }
+            if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-reflect"))) {
                 useVersion("1.8.0")
             }
         }
