--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,12 @@ dependencies:
   intl: ^0.19.0
   lottie: ^3.0.0
   mockito: ^5.4.4
+  path: ^1.8.3
+  path_provider: ^2.1.2
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  sqflite: ^2.3.0
   timezone: ^0.9.2
   typing_animation: ^0.0.1
 
